tests/vendor/valid/simple/switch_single_case.c
//expect 1
//tags: simple, switch
int main() {
    int a = 1;
    // a switch statement body may be a single case
    switch(a) case 1: return 1;
    return 0;
}