tests/vendor/invalid/syntax/switch_missing_case_value.c
//tags: simple, switch
int main() {
    switch(0) {
        case: return 0;
    }
}